# d3x

./: .gitignore  CLAUDE.md  LICENSE  README.md  d3x.cabal  flake.nix  maps.md
examples/: SparkPlot.hs
lib/D3X/: Blocks.hs  Examples.hs  Geo.hs  Path.hs  Pie.hs  Prelude.hs  Scales.hs  Stack.hs
lib/D3X/Geo/: Bounds.hs  Cartesian.hs  Clip.hs  Fit.hs  GeoJSON.hs  Graticule.hs  Math.hs  Path.hs  Projection.hs  Raw.hs  Resample.hs  Rotation.hs  Stream.hs
